# amalia_core

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
amalia/: architecture.py  config.py
amalia-core/: architecture.py
amalia_core/: __init__.py  architecture.py  config.py
