[project]
name = "amalia"
version = "0.6.4"
description = "Add your description here"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.5.0",
    "torch>=2.12.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["amalia"]
